--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.cdnfonts.com/css/minecraft-4" rel="stylesheet">
     <title>MineSweeper</title>
 </head>
 <body>
+    <h1>MineSweeper</h1>
     <div class="grid"></div>
 </body>
 </html>
