added more sounds and changed the style a little

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <h1>MineSweeper</h1>
-    <p></p>
+    <p>Number of bombs: 20</p>
     <div class="grid"></div>
 </body>
 </html>
